syntax = "proto3";

option go_package = "di_store/pb/storage_server";


package di_store.storage_server;

import "node_tracker.proto";

service ObjectStore {
    rpc update_storage_server (UpdateStorageServerRequest) returns (UpdateStorageServerResponse) {}
    rpc fetch (FetchRequest) returns (FetchResponse) {}
    rpc get (GetRequest) returns (GetResponse) {}
    rpc delete (DeleteRequest) returns (DeleteResponse) {}
}

message UpdateStorageServerRequest{
    di_store.node_tracker.StorageServer server_info = 1;
    bool remove = 2;
}
message UpdateStorageServerResponse{}

message DeleteRequest {
    repeated string object_id_hex_list = 1;
}

message DeleteResponse {}

message FetchRequest {
    string object_id_hex = 1;
    bool via_rpc = 2;
    string src_node = 3;
    bool src_node_only = 4;
}

message FetchResponse {}

message GetRequest {
    string object_id_hex = 1;
}

message GetResponse {
    bool not_found = 1;
    bytes data = 2;
}